# omp

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
src/: colors.h  netpbm.c  netpbm.h  sobel.c  sobel.h
tests/: netpbm_test.c
